fixed issue with view on smaller screens - amended the vh of the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ header {
 }
 
 .intro-container {
-    height: 50vh;
+    height: 60vh;
 
     background: url(../images/library.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -69,7 +69,7 @@ header {
 p {
     color: #f4edea;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 80px;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
